--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
     "@ngrx/store": "^8.6.0",
+    "aws-amplify": "^2.2.2",
+    "aws-amplify-angular": "^4.1.3",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "rxjs": "~6.4.0",
