--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "@ngrx/effects": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "aws-amplify": "^2.2.2",
     "aws-amplify-angular": "^4.1.3",
