--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.2.8",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^8.6.0",
     "aws-amplify": "^2.2.2",
     "aws-amplify-angular": "^4.1.3",
     "compression": "^1.7.4",
