--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.2.8",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^9.1.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "rxjs": "~6.4.0",
